--- a/css/scss/_typography.scss
+++ b/css/scss/_typography.scss
@@ -61,7 +61,6 @@ body {
 // Body heading
 .type-body-heading {
 	text-align: center;
-	padding-top: 10px;
 	font-weight: 800;
 	font-size: 4vmin;
 	color: black;
@@ -86,28 +85,40 @@ body {
 	}
 }
 
-.instruction-container {
-	display: block;
-	margin: auto;
-	width: 400px;
+.student-intruct{
+	position: absolute;
+	width:100%;
+	bottom:0;
+	left:0;
+}
 
+.instruction-container {
+	display: inline-block;
+	position: absolute;
+	width:100%;
+	bottom:0;
+	left:0;
+	background:$uq-green;
+	text-align:center;
 	h3 {
 		color: black;
 		display: inline-block;
-		font-size: 3vmin;
+		font-size: 30px;
+		font-weight:900;
 
 		span {
-			background: black;
+			background: $uq-purple;
 			color: white;
 			padding: 4px;
 		}
 	}
 
 	.circle-number {
-		margin-right: 20px;
-		width: 50px;
-		height: 50px;
-		font-size: 30px;
+		margin-right: 1px;
+		margin-left: 10px;
+		width: 30px;
+		height: 30px;
+		font-size: 20px;
 		color: white;
 		text-align: center;
 		font-weight: 900;
@@ -115,10 +126,8 @@ body {
 		border-radius: 50%;
 		
 		p {
-				padding-top: 10px;
-
+				padding-top: 5px;
 		}
-		
 		margin-top: 10px;
 		margin-bottom: 10px;
 		display: inline-block;
@@ -133,6 +142,7 @@ body {
 	font-weight: 900;
 	font-size: 30px;
 	text-align: center;
+	margin-top:10px;
 	span {
 
 
@@ -154,12 +164,6 @@ body {
 	color: $uq-purple;
 }
 
-.instruction-bottom {
-	width: 100%;
-	height: 2px;
-	background: $uq-purple;
-	margin-bottom: 20px;
-}
 
 
 // question heading
