--- a/css/scss/_headers.scss
+++ b/css/scss/_headers.scss
@@ -95,7 +95,7 @@ $break-small: 960px;
     width: 100%;
     background: #ffffff;
 	@media screen and (max-width: $break-small) {
-      width: 100px;
+      height: 100px;
     }
 	
 }
