--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -15,6 +15,7 @@
 $uq-purple: #410C54;
 $uq-green: #8ED676;
 $header-height: 173px;
+$break-small: 960px;
 
 /* *************************
   MIXINS 
