--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 /* *************************
   MIXINS 
 ************************* */
-/* line 38, scss/main.scss */
+/* line 39, scss/main.scss */
 .noselect, .list-subjects li, .list-subjects-purple li, .list-subjects-green li, .list-questions-green li, .list-questions li, .list-make-green li, .list-questions-purple li, .student-list li {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -21,7 +21,7 @@
   user-select: none;
 }
 
-/* line 47, scss/main.scss */
+/* line 48, scss/main.scss */
 .width100 {
   width: 100%;
 }
@@ -267,8 +267,14 @@ input:focus {
 .button-goto-prepare:hover {
   background-color: #1e0627;
 }
+@media screen and (max-width: 960px) {
+  /* line 66, scss/_buttons.scss */
+  .button-goto-prepare {
+    width: 80px;
+  }
+}
 
-/* line 85, scss/_buttons.scss */
+/* line 89, scss/_buttons.scss */
 .button-back-prepare-response {
   background-color: #744884;
   width: 120px;
@@ -278,16 +284,22 @@ input:focus {
   color: white;
   text-align: center;
 }
-/* line 94, scss/_buttons.scss */
+/* line 98, scss/_buttons.scss */
 .button-back-prepare-response p {
   margin-top: 15px;
 }
-/* line 98, scss/_buttons.scss */
+/* line 102, scss/_buttons.scss */
 .button-back-prepare-response:hover {
   background-color: #9c6aae;
 }
+@media screen and (max-width: 960px) {
+  /* line 89, scss/_buttons.scss */
+  .button-back-prepare-response {
+    width: 80px;
+  }
+}
 
-/* line 103, scss/_buttons.scss */
+/* line 111, scss/_buttons.scss */
 .button-back-lecture-response {
   background-color: #6eca4f;
   width: 120px;
@@ -297,16 +309,22 @@ input:focus {
   color: white;
   text-align: center;
 }
-/* line 113, scss/_buttons.scss */
+/* line 121, scss/_buttons.scss */
 .button-back-lecture-response p {
   margin-top: 15px;
 }
-/* line 117, scss/_buttons.scss */
+/* line 125, scss/_buttons.scss */
 .button-back-lecture-response:hover {
   background-color: #5dc43b;
 }
+@media screen and (max-width: 960px) {
+  /* line 111, scss/_buttons.scss */
+  .button-back-lecture-response {
+    width: 80px;
+  }
+}
 
-/* line 122, scss/_buttons.scss */
+/* line 134, scss/_buttons.scss */
 .button-back-prepare {
   background-color: #8ED676;
   width: 120px;
@@ -316,16 +334,22 @@ input:focus {
   color: white;
   text-align: center;
 }
-/* line 132, scss/_buttons.scss */
+/* line 144, scss/_buttons.scss */
 .button-back-prepare p {
   margin-top: 15px;
 }
-/* line 136, scss/_buttons.scss */
+/* line 148, scss/_buttons.scss */
 .button-back-prepare:hover {
   background-color: #6eca4f;
 }
+@media screen and (max-width: 960px) {
+  /* line 134, scss/_buttons.scss */
+  .button-back-prepare {
+    width: 80px;
+  }
+}
 
-/* line 141, scss/_buttons.scss */
+/* line 157, scss/_buttons.scss */
 .button-back-lecture {
   background-color: #6eca4f;
   width: 120px;
@@ -335,16 +359,22 @@ input:focus {
   color: white;
   text-align: center;
 }
-/* line 151, scss/_buttons.scss */
+/* line 167, scss/_buttons.scss */
 .button-back-lecture p {
   margin-top: 15px;
 }
-/* line 155, scss/_buttons.scss */
+/* line 171, scss/_buttons.scss */
 .button-back-lecture:hover {
   background-color: #54b135;
 }
+@media screen and (max-width: 960px) {
+  /* line 157, scss/_buttons.scss */
+  .button-back-lecture {
+    width: 80px;
+  }
+}
 
-/* line 160, scss/_buttons.scss */
+/* line 180, scss/_buttons.scss */
 .button-goto-lecture {
   background-color: #8ED676;
   width: 120px;
@@ -354,23 +384,29 @@ input:focus {
   color: white;
   text-align: center;
 }
-/* line 170, scss/_buttons.scss */
+/* line 190, scss/_buttons.scss */
 .button-goto-lecture p {
   margin-top: 9px;
 }
-/* line 174, scss/_buttons.scss */
+/* line 194, scss/_buttons.scss */
 .button-goto-lecture:hover {
   background-color: #6eca4f;
 }
+@media screen and (max-width: 960px) {
+  /* line 180, scss/_buttons.scss */
+  .button-goto-lecture {
+    width: 80px;
+  }
+}
 
-/* line 179, scss/_buttons.scss */
+/* line 203, scss/_buttons.scss */
 .drawing-app-submit {
   position: absolute;
   top: 10px;
   right: 10px;
 }
 
-/* line 189, scss/_buttons.scss */
+/* line 213, scss/_buttons.scss */
 .drawing-app-question {
   position: absolute;
   top: 60px;
@@ -378,7 +414,7 @@ input:focus {
   margin-right: -75px;
   z-index: 1000;
 }
-/* line 200, scss/_buttons.scss */
+/* line 224, scss/_buttons.scss */
 .drawing-app-question:hover {
   border: 2px solid #410C54;
   color: #FFF;
@@ -386,14 +422,14 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 208, scss/_buttons.scss */
+/* line 232, scss/_buttons.scss */
 .drawing-app-camera {
   position: absolute;
   top: 60px;
   right: 10px;
   z-index: 1000;
 }
-/* line 218, scss/_buttons.scss */
+/* line 242, scss/_buttons.scss */
 .drawing-app-camera:hover {
   border: 2px solid #410C54;
   color: #FFF;
@@ -401,14 +437,14 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 227, scss/_buttons.scss */
+/* line 251, scss/_buttons.scss */
 .drawing-app-clear {
   position: absolute;
   top: 60px;
   left: 10px;
   z-index: 1000;
 }
-/* line 237, scss/_buttons.scss */
+/* line 261, scss/_buttons.scss */
 .drawing-app-clear:hover {
   border: 2px solid #410C54;
   color: #FFF;
@@ -416,21 +452,21 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 245, scss/_buttons.scss */
+/* line 269, scss/_buttons.scss */
 .drawing-app-back {
   position: absolute;
   top: 10px;
   left: 10px;
 }
 
-/* line 254, scss/_buttons.scss */
+/* line 278, scss/_buttons.scss */
 .back-button {
   position: absolute;
   top: 60px;
   left: 10px;
 }
 
-/* line 263, scss/_buttons.scss */
+/* line 287, scss/_buttons.scss */
 .q-button {
   font-size: 12px;
   color: #410C54;
@@ -438,7 +474,7 @@ input:focus {
   width: 60px;
   margin: 1px;
 }
-/* line 270, scss/_buttons.scss */
+/* line 294, scss/_buttons.scss */
 .q-button:hover {
   background: #410C54;
   color: white;
@@ -446,14 +482,14 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 278, scss/_buttons.scss */
+/* line 302, scss/_buttons.scss */
 .q-button-long {
   font-size: 12px;
   border: 2px solid #410C54;
   color: #410C54;
   width: 130px;
 }
-/* line 284, scss/_buttons.scss */
+/* line 308, scss/_buttons.scss */
 .q-button-long:hover {
   border: 2px solid #410C54;
   background: #410C54;
@@ -461,7 +497,7 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 293, scss/_buttons.scss */
+/* line 317, scss/_buttons.scss */
 .add-button {
   font-size: 14px;
   color: #410C54;
@@ -470,7 +506,7 @@ input:focus {
   width: 80px;
   border: none;
 }
-/* line 301, scss/_buttons.scss */
+/* line 325, scss/_buttons.scss */
 .add-button:hover {
   background: #8ED676;
   border: none;
@@ -478,7 +514,7 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 310, scss/_buttons.scss */
+/* line 334, scss/_buttons.scss */
 .add-button-m {
   font-size: 14px;
   color: #410C54;
@@ -487,7 +523,7 @@ input:focus {
   width: 80px;
   border: none;
 }
-/* line 318, scss/_buttons.scss */
+/* line 342, scss/_buttons.scss */
 .add-button-m:hover {
   background: #8ED676;
   border: none;
@@ -495,7 +531,7 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 326, scss/_buttons.scss */
+/* line 350, scss/_buttons.scss */
 .add-button-e {
   font-size: 14px;
   color: #8ED676;
@@ -503,7 +539,7 @@ input:focus {
   border: none;
   margin-top: 20px;
 }
-/* line 333, scss/_buttons.scss */
+/* line 357, scss/_buttons.scss */
 .add-button-e:hover {
   background: #410C54;
   border: none;
@@ -511,7 +547,7 @@ input:focus {
   transition: 0.4s;
 }
 
-/* line 342, scss/_buttons.scss */
+/* line 366, scss/_buttons.scss */
 .button-hidden {
   opacity: 0;
   transition: opacity 0.3s linear;
@@ -526,7 +562,7 @@ input:focus {
   z-index: 100;
 }
 
-/* line 356, scss/_buttons.scss */
+/* line 380, scss/_buttons.scss */
 .grid-response:hover .button-hidden {
   opacity: 1;
 }
@@ -549,7 +585,7 @@ input:focus {
     color: #ffffff;
 }
 */
-/* line 379, scss/_buttons.scss */
+/* line 403, scss/_buttons.scss */
 .button-correct {
   -moz-box-shadow: inset 0px 1px 0px 0px #a4e271;
   -webkit-box-shadow: inset 0px 1px 0px 0px #a4e271;
@@ -580,7 +616,7 @@ input:focus {
   outline: none;
 }
 
-/* line 408, scss/_buttons.scss */
+/* line 432, scss/_buttons.scss */
 .button-correct:hover {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77a809), color-stop(1, #89c403));
   background: -moz-linear-gradient(top, #77a809 5%, #89c403 100%);
@@ -592,13 +628,13 @@ input:focus {
   background-color: #77a809;
 }
 
-/* line 418, scss/_buttons.scss */
+/* line 442, scss/_buttons.scss */
 .button-correct:active {
   position: relative;
   top: 1px;
 }
 
-/* line 424, scss/_buttons.scss */
+/* line 448, scss/_buttons.scss */
 .button-incorrect {
   -moz-box-shadow: inset 0px 1px 0px 0px #f5978e;
   -webkit-box-shadow: inset 0px 1px 0px 0px #f5978e;
@@ -629,7 +665,7 @@ input:focus {
   outline: none;
 }
 
-/* line 453, scss/_buttons.scss */
+/* line 477, scss/_buttons.scss */
 .button-incorrect:hover {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537));
   background: -moz-linear-gradient(top, #c62d1f 5%, #f24537 100%);
@@ -641,14 +677,14 @@ input:focus {
   background-color: #c62d1f;
 }
 
-/* line 463, scss/_buttons.scss */
+/* line 487, scss/_buttons.scss */
 .button-incorrect:active {
   position: relative;
   top: 1px;
 }
 
 /*input file button in makequestion page*/
-/* line 470, scss/_buttons.scss */
+/* line 494, scss/_buttons.scss */
 .inputfile {
   width: 0.1px;
   height: 0.1px;
@@ -658,7 +694,7 @@ input:focus {
   z-index: -1;
 }
 
-/* line 479, scss/_buttons.scss */
+/* line 503, scss/_buttons.scss */
 .upload-file {
   font-size: 14px;
   color: #410C54;
@@ -667,7 +703,7 @@ input:focus {
   width: 100px;
   border-radius: 18px;
 }
-/* line 486, scss/_buttons.scss */
+/* line 510, scss/_buttons.scss */
 .upload-file:hover {
   background: #8ED676;
   border: none;
@@ -1275,7 +1311,7 @@ body {
 .instruction-container {
   display: block;
   margin: auto;
-  width: 400px;
+  width: 450px;
 }
 /* line 94, scss/_typography.scss */
 .instruction-container h3 {
