--- a/css/main.css
+++ b/css/main.css
@@ -1739,77 +1739,83 @@ body {
   }
 }
 
-/* line 32, scss/_list.scss */
+/* line 29, scss/_list.scss */
+.list-subject {
+  margin-top: 15px;
+}
+
+/* line 36, scss/_list.scss */
 .list-subjects-purple li {
   background: #410C54;
 }
-/* line 37, scss/_list.scss */
+/* line 41, scss/_list.scss */
 .list-subjects-purple li:hover {
   background: #1e0627;
 }
-/* line 40, scss/_list.scss */
+/* line 44, scss/_list.scss */
 .list-subjects-purple h3 {
   text-align: center;
   padding-bottom: 10px;
 }
 
-/* line 47, scss/_list.scss */
+/* line 51, scss/_list.scss */
 .list-subjects-green {
   opacity: .8;
+  margin-top: -45px;
 }
-/* line 50, scss/_list.scss */
+/* line 55, scss/_list.scss */
 .list-subjects-green li {
   background: #8ED676;
 }
-/* line 54, scss/_list.scss */
+/* line 59, scss/_list.scss */
 .list-subjects-green li:hover {
   background: #54b135;
 }
-/* line 57, scss/_list.scss */
+/* line 62, scss/_list.scss */
 .list-subjects-green h3 {
   text-align: center;
   padding-bottom: 10px;
 }
 
-/* line 63, scss/_list.scss */
+/* line 68, scss/_list.scss */
 #addbutton {
   width: 80%;
   margin: auto;
   text-align: center;
 }
 
-/* line 69, scss/_list.scss */
+/* line 74, scss/_list.scss */
 .list-questions-green {
   opacity: .9;
 }
-/* line 72, scss/_list.scss */
+/* line 77, scss/_list.scss */
 .list-questions-green li {
   background: #8ED676;
   text-align: left;
   padding-right: 5px;
 }
-/* line 78, scss/_list.scss */
+/* line 83, scss/_list.scss */
 .list-questions-green li:hover {
   background: #54b135;
 }
-/* line 81, scss/_list.scss */
+/* line 86, scss/_list.scss */
 .list-questions-green h3 {
   text-align: center;
   padding-bottom: 10px;
 }
-/* line 86, scss/_list.scss */
+/* line 91, scss/_list.scss */
 .list-questions-green li button {
   float: right;
   margin-top: -5px;
 }
 
 /*style for question list in student question page*/
-/* line 95, scss/_list.scss */
+/* line 100, scss/_list.scss */
 .student-list {
   width: 80%;
   margin: auto;
 }
-/* line 100, scss/_list.scss */
+/* line 105, scss/_list.scss */
 .student-list li {
   margin-bottom: 10px;
   background: #8ED676;
@@ -1825,23 +1831,23 @@ body {
   text-align: center;
   border-radius: 14px;
 }
-/* line 115, scss/_list.scss */
+/* line 120, scss/_list.scss */
 .student-list li:hover {
   background: #dff3d8;
   color: #8ED676;
   transition: 0.4s;
 }
-/* line 122, scss/_list.scss */
+/* line 127, scss/_list.scss */
 .student-list li button {
   float: right;
 }
 
-/* line 128, scss/_list.scss */
+/* line 133, scss/_list.scss */
 .closed-questions {
   width: 80%;
   margin: auto;
 }
-/* line 133, scss/_list.scss */
+/* line 138, scss/_list.scss */
 .closed-questions li {
   margin-bottom: 10px;
   background: gray;
@@ -1857,18 +1863,18 @@ body {
   text-align: center;
   border-radius: 14px;
 }
-/* line 148, scss/_list.scss */
+/* line 153, scss/_list.scss */
 .closed-questions li:hover {
   background: gray;
   color: #8ED676;
   cursor: default;
 }
-/* line 155, scss/_list.scss */
+/* line 160, scss/_list.scss */
 .closed-questions li button {
   float: right;
 }
 
-/* line 164, scss/_list.scss */
+/* line 169, scss/_list.scss */
 .list-questions ul li, .list-make-green ul li, .list-questions-purple ul li {
   color: white;
   min-height: 30px;
@@ -1881,26 +1887,26 @@ body {
   width: 100%;
   cursor: default;
 }
-/* line 177, scss/_list.scss */
+/* line 182, scss/_list.scss */
 .list-questions h2, .list-make-green h2, .list-questions-purple h2 {
   text-align: center;
   padding-top: 10px;
   font-weight: 800;
   font-size: 20px;
 }
-/* line 184, scss/_list.scss */
+/* line 189, scss/_list.scss */
 .list-questions h3, .list-make-green h3, .list-questions-purple h3 {
   text-align: center;
   padding-top: 10px;
   font-weight: 500;
   padding-bottom: 10px;
 }
-/* line 191, scss/_list.scss */
+/* line 196, scss/_list.scss */
 .list-questions label, .list-make-green label, .list-questions-purple label {
   font-size: 20px;
   color: black;
 }
-/* line 195, scss/_list.scss */
+/* line 200, scss/_list.scss */
 .list-questions .button, .list-make-green .button, .list-questions-purple .button {
   border-radius: 12px;
   margin-right: 5px;
@@ -1914,7 +1920,7 @@ body {
   color: #410C54;
   width: 75px;
 }
-/* line 207, scss/_list.scss */
+/* line 212, scss/_list.scss */
 .list-questions .button:hover, .list-make-green .button:hover, .list-questions-purple .button:hover {
   border: 2px solid #410C54;
   background: #410C54;
@@ -1922,44 +1928,48 @@ body {
   transition: 0.4s;
 }
 
-/* line 221, scss/_list.scss */
+/* line 222, scss/_list.scss */
+.list-make-green {
+  margin-top: -45px;
+}
+/* line 226, scss/_list.scss */
 .list-make-green div {
   background: #8ED676;
 }
-/* line 225, scss/_list.scss */
+/* line 230, scss/_list.scss */
 .list-make-green .button {
   color: #8ED676;
 }
-/* line 227, scss/_list.scss */
+/* line 232, scss/_list.scss */
 .list-make-green .button:hover {
   border: 2px solid #8ED676;
   background: #8ED676;
   color: white;
   transition: 0.4s;
 }
-/* line 235, scss/_list.scss */
+/* line 240, scss/_list.scss */
 .list-make-green ul li div {
   cursor: default;
 }
-/* line 238, scss/_list.scss */
+/* line 243, scss/_list.scss */
 .list-make-green #addbutton {
   width: 100%;
 }
 
-/* line 247, scss/_list.scss */
+/* line 252, scss/_list.scss */
 .list-questions-purple ul li div {
   background: #410C54;
   cursor: default;
 }
 
-/* line 256, scss/_list.scss */
+/* line 261, scss/_list.scss */
 .grid-container {
   margin: 0 auto;
   width: 1200px;
   padding-top: 20px;
 }
 
-/* line 263, scss/_list.scss */
+/* line 268, scss/_list.scss */
 .grid-response {
   float: left;
   width: 110px;
@@ -1972,7 +1982,7 @@ body {
   border-color: #410C54;
 }
 
-/* line 275, scss/_list.scss */
+/* line 280, scss/_list.scss */
 .question-container {
   color: white;
   min-height: 30px;
@@ -1985,7 +1995,7 @@ body {
   min-width: 100%;
 }
 
-/* line 287, scss/_list.scss */
+/* line 292, scss/_list.scss */
 .question-container-m {
   color: white;
   margin-top: 20px;
@@ -1997,7 +2007,7 @@ body {
   cursor: default;
 }
 
-/* line 298, scss/_list.scss */
+/* line 303, scss/_list.scss */
 .question {
   float: left;
   padding-bottom: 12px;
@@ -2007,14 +2017,14 @@ body {
   text-overflow: ellipsis;
   width: 50vw;
 }
-/* line 306, scss/_list.scss */
+/* line 311, scss/_list.scss */
 .question:hover {
   white-space: normal;
   text-overflow: inherit;
   overflow: visible;
 }
 
-/* line 313, scss/_list.scss */
+/* line 318, scss/_list.scss */
 .question-button {
   float: right;
   border-radius: 200px;
@@ -2024,7 +2034,7 @@ body {
 }
 
 /* Style for text input animation Isao */
-/* line 323, scss/_list.scss */
+/* line 328, scss/_list.scss */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -2033,7 +2043,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-/* line 331, scss/_list.scss */
+/* line 336, scss/_list.scss */
 .input {
   position: relative;
   z-index: 1;
@@ -2044,7 +2054,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
 }
 
-/* line 341, scss/_list.scss */
+/* line 346, scss/_list.scss */
 .input__field {
   position: relative;
   display: block;
@@ -2061,12 +2071,12 @@ input[type=number]::-webkit-outer-spin-button {
   /* for box shadows to show on iOS */
 }
 
-/* line 356, scss/_list.scss */
+/* line 361, scss/_list.scss */
 .input__field:focus {
   outline: none;
 }
 
-/* line 360, scss/_list.scss */
+/* line 365, scss/_list.scss */
 .input__label {
   display: inline-block;
   float: right;
@@ -2085,7 +2095,7 @@ input[type=number]::-webkit-outer-spin-button {
   user-select: none;
 }
 
-/* line 378, scss/_list.scss */
+/* line 383, scss/_list.scss */
 .input__label-content {
   position: relative;
   display: block;
@@ -2093,7 +2103,7 @@ input[type=number]::-webkit-outer-spin-button {
   width: 100%;
 }
 
-/* line 385, scss/_list.scss */
+/* line 390, scss/_list.scss */
 .graphic {
   position: absolute;
   top: 0;
@@ -2101,13 +2111,13 @@ input[type=number]::-webkit-outer-spin-button {
   fill: none;
 }
 
-/* line 392, scss/_list.scss */
+/* line 397, scss/_list.scss */
 .icon {
   color: #ddd;
   font-size: 150%;
 }
 
-/* line 397, scss/_list.scss */
+/* line 402, scss/_list.scss */
 .input__field--isao {
   z-index: 10;
   padding: 0.75em 0.1em 0.25em;
@@ -2118,7 +2128,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 407, scss/_list.scss */
+/* line 412, scss/_list.scss */
 .input__label--isao {
   position: relative;
   overflow: hidden;
@@ -2128,7 +2138,7 @@ input[type=number]::-webkit-outer-spin-button {
   text-align: left;
 }
 
-/* line 416, scss/_list.scss */
+/* line 421, scss/_list.scss */
 .input__label--isao::before {
   content: '';
   position: absolute;
@@ -2146,7 +2156,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 433, scss/_list.scss */
+/* line 438, scss/_list.scss */
 .input__label--isao::after {
   content: attr(data-content);
   position: absolute;
@@ -2164,26 +2174,26 @@ input[type=number]::-webkit-outer-spin-button {
   pointer-events: none;
 }
 
-/* line 450, scss/_list.scss */
+/* line 455, scss/_list.scss */
 .input__field--isao:focus + .input__label--isao::before {
   background-color: #8ED676;
   -webkit-transform: scale3d(1, 1, 1);
   transform: scale3d(1, 1, 1);
 }
 
-/* line 456, scss/_list.scss */
+/* line 461, scss/_list.scss */
 .input__field--isao:focus + .input__label--isao {
   pointer-events: none;
 }
 
-/* line 460, scss/_list.scss */
+/* line 465, scss/_list.scss */
 .input__field--isao:focus + .input__label--isao::after {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
-/* line 466, scss/_list.scss */
+/* line 471, scss/_list.scss */
 .input__label-content--isao {
   padding: 0.75em 0.15em;
   -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
@@ -2192,7 +2202,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 474, scss/_list.scss */
+/* line 479, scss/_list.scss */
 .input__field--isao:focus + .input__label--isao .input__label-content--isao {
   opacity: 0;
   -webkit-transform: translate3d(0, -50%, 0);
@@ -2200,7 +2210,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 /*make question text input*/
-/* line 482, scss/_list.scss */
+/* line 487, scss/_list.scss */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -2209,7 +2219,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-/* line 490, scss/_list.scss */
+/* line 495, scss/_list.scss */
 .input-m-t {
   position: relative;
   z-index: 1;
@@ -2220,7 +2230,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
 }
 
-/* line 500, scss/_list.scss */
+/* line 505, scss/_list.scss */
 .input-m {
   position: relative;
   z-index: 1;
@@ -2231,7 +2241,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
 }
 
-/* line 510, scss/_list.scss */
+/* line 515, scss/_list.scss */
 .input__field-m {
   position: relative;
   display: block;
@@ -2248,12 +2258,12 @@ input[type=number]::-webkit-outer-spin-button {
   /* for box shadows to show on iOS */
 }
 
-/* line 525, scss/_list.scss */
+/* line 530, scss/_list.scss */
 .input__field-m:focus {
   outline: none;
 }
 
-/* line 529, scss/_list.scss */
+/* line 534, scss/_list.scss */
 .input__label-m {
   display: inline-block;
   float: right;
@@ -2272,7 +2282,7 @@ input[type=number]::-webkit-outer-spin-button {
   user-select: none;
 }
 
-/* line 547, scss/_list.scss */
+/* line 552, scss/_list.scss */
 .input__label-content-m {
   position: relative;
   display: block;
@@ -2281,7 +2291,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 555, scss/_list.scss */
+/* line 560, scss/_list.scss */
 .graphic-m {
   position: absolute;
   top: 0;
@@ -2289,13 +2299,13 @@ input[type=number]::-webkit-outer-spin-button {
   fill: none;
 }
 
-/* line 562, scss/_list.scss */
+/* line 567, scss/_list.scss */
 .icon-m {
   color: #ddd;
   font-size: 150%;
 }
 
-/* line 567, scss/_list.scss */
+/* line 572, scss/_list.scss */
 .input__field--isao-m {
   z-index: 10;
   padding: 0.75em 0.1em 0.25em;
@@ -2305,7 +2315,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 577, scss/_list.scss */
+/* line 582, scss/_list.scss */
 .input__label--isao-m {
   position: relative;
   overflow: hidden;
@@ -2316,7 +2326,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-weight: bold;
 }
 
-/* line 587, scss/_list.scss */
+/* line 592, scss/_list.scss */
 .input__label--isao-m::before {
   content: '';
   position: absolute;
@@ -2334,7 +2344,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 604, scss/_list.scss */
+/* line 609, scss/_list.scss */
 .input__label--isao-m::after {
   content: attr(data-content);
   position: absolute;
@@ -2353,26 +2363,26 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 622, scss/_list.scss */
+/* line 627, scss/_list.scss */
 .input__field--isao-m:focus + .input__label--isao-m::before {
   background-color: #8ED676;
   -webkit-transform: scale3d(1, 1, 1);
   transform: scale3d(1, 1, 1);
 }
 
-/* line 628, scss/_list.scss */
+/* line 633, scss/_list.scss */
 .input__field--isao-m:focus + .input__label--isao-m {
   pointer-events: none;
 }
 
-/* line 632, scss/_list.scss */
+/* line 637, scss/_list.scss */
 .input__field--isao-m:focus + .input__label--isao-m::after {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
-/* line 638, scss/_list.scss */
+/* line 643, scss/_list.scss */
 .input__label-content--isao-m {
   color: white;
   padding: 0.75em 0.15em;
@@ -2382,7 +2392,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 647, scss/_list.scss */
+/* line 652, scss/_list.scss */
 .input__field--isao-m:focus + .input__label--isao-m .input__label-content--isao-m {
   opacity: 0;
   -webkit-transform: translate3d(0, -50%, 0);
@@ -2390,7 +2400,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 /*edit question text input*/
-/* line 662, scss/_list.scss */
+/* line 667, scss/_list.scss */
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -2399,7 +2409,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0;
 }
 
-/* line 670, scss/_list.scss */
+/* line 675, scss/_list.scss */
 .input-e-t {
   position: relative;
   z-index: 1;
@@ -2410,7 +2420,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
 }
 
-/* line 680, scss/_list.scss */
+/* line 685, scss/_list.scss */
 .input-e {
   position: relative;
   z-index: 1;
@@ -2421,7 +2431,7 @@ input[type=number]::-webkit-outer-spin-button {
   vertical-align: top;
 }
 
-/* line 690, scss/_list.scss */
+/* line 695, scss/_list.scss */
 .input__field-e {
   position: relative;
   display: block;
@@ -2438,12 +2448,12 @@ input[type=number]::-webkit-outer-spin-button {
   /* for box shadows to show on iOS */
 }
 
-/* line 705, scss/_list.scss */
+/* line 710, scss/_list.scss */
 .input__field-e:focus {
   outline: none;
 }
 
-/* line 709, scss/_list.scss */
+/* line 714, scss/_list.scss */
 .input__label-e {
   display: inline-block;
   float: right;
@@ -2462,7 +2472,7 @@ input[type=number]::-webkit-outer-spin-button {
   user-select: none;
 }
 
-/* line 727, scss/_list.scss */
+/* line 732, scss/_list.scss */
 .input__label-content-e {
   position: relative;
   display: block;
@@ -2471,7 +2481,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 735, scss/_list.scss */
+/* line 740, scss/_list.scss */
 .graphic-e {
   position: absolute;
   top: 0;
@@ -2479,13 +2489,13 @@ input[type=number]::-webkit-outer-spin-button {
   fill: none;
 }
 
-/* line 742, scss/_list.scss */
+/* line 747, scss/_list.scss */
 .icon-e {
   color: #ddd;
   font-size: 150%;
 }
 
-/* line 747, scss/_list.scss */
+/* line 752, scss/_list.scss */
 .input__field--isao-e {
   z-index: 10;
   padding: 0.75em 0.1em 0.25em;
@@ -2495,7 +2505,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 757, scss/_list.scss */
+/* line 762, scss/_list.scss */
 .input__label--isao-e {
   position: relative;
   overflow: hidden;
@@ -2506,7 +2516,7 @@ input[type=number]::-webkit-outer-spin-button {
   font-weight: bold;
 }
 
-/* line 767, scss/_list.scss */
+/* line 772, scss/_list.scss */
 .input__label--isao-e::before {
   content: '';
   position: absolute;
@@ -2524,7 +2534,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 784, scss/_list.scss */
+/* line 789, scss/_list.scss */
 .input__label--isao-e::after {
   content: attr(data-content);
   position: absolute;
@@ -2543,26 +2553,26 @@ input[type=number]::-webkit-outer-spin-button {
   font-size: 14px;
 }
 
-/* line 802, scss/_list.scss */
+/* line 807, scss/_list.scss */
 .input__field--isao-e:focus + .input__label--isao-e::before {
   background-color: #410C54;
   -webkit-transform: scale3d(1, 1, 1);
   transform: scale3d(1, 1, 1);
 }
 
-/* line 808, scss/_list.scss */
+/* line 813, scss/_list.scss */
 .input__field--isao-e:focus + .input__label--isao-e {
   pointer-events: none;
 }
 
-/* line 812, scss/_list.scss */
+/* line 817, scss/_list.scss */
 .input__field--isao-e:focus + .input__label--isao-e::after {
   opacity: 1;
   -webkit-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0);
 }
 
-/* line 818, scss/_list.scss */
+/* line 823, scss/_list.scss */
 .input__label-content--isao-e {
   color: white;
   padding: 0.75em 0.15em;
@@ -2572,7 +2582,7 @@ input[type=number]::-webkit-outer-spin-button {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
-/* line 827, scss/_list.scss */
+/* line 832, scss/_list.scss */
 .input__field--isao-e:focus + .input__label--isao-e .input__label-content--isao-e {
   opacity: 0;
   -webkit-transform: translate3d(0, -50%, 0);
